--- a/build.gradle
+++ b/build.gradle
@@ -17,42 +17,38 @@ repositories {
 
 dependencies {
 
+    // Core starters
     implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
         exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
-        exclude group: 'org.slf4j', module: 'log4j-to-slf4j'
-    }
-
-    /*implementation ("org.springframework.boot:spring-boot-starter-data-jpa") {
-        //exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
-        exclude group: 'org.slf4j', module: 'log4j-to-slf4j'
         exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
-    }*/
-    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+    }
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+
+    // MySQL
+    runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'
+
+    // Swagger 3 (Springfox)
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+    // JWT
+    implementation 'com.auth0:java-jwt:4.2.1'
+
+    // Redis (si realmente lo necesitas)
     implementation 'org.springframework.session:spring-session-data-redis'
     implementation 'io.lettuce:lettuce-core'
 
-    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-    //implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
-    //implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-    implementation 'org.projectlombok:lombok:1.18.16'
-    implementation 'org.slf4j:slf4j-api:1.7.32'
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'io.springfox:springfox-swagger2:3.0.0'
-    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    //developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation 'com.auth0:java-jwt:4.2.1'
-    implementation "jakarta.persistence:jakarta.persistence-api:3.0.0"
-
-    /*implementation('org.springframework.boot:spring-boot-starter-thymeleaf') {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
-        exclude group: 'org.slf4j', module: 'log4j-to-slf4j'
-    }*/
-
-    runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'
+    // Testing
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
