Gamedata y ScoreInfo modificados, añadidos controladores y tipos de datos

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -24,4 +24,4 @@ logger.userController.additivity = false
 appender.userController.type = Console
 appender.userController.name = ControllerConsole
 appender.userController.layout.type = PatternLayout
-appender.userController.layout.pattern = %d{HH:mm:ss.SSS} [%t] %-5level %logger{36} [%M()] - Session ID: %X{sessionID} - UserID: %X{userId} - %msg %n
+appender.userController.layout.pattern = %d{HH:mm:ss.SSS} [%t] %-5level %logger{36} [%M()] - Session ID: %X{sessionID} - UserID: %X{userEmail} - %msg %n
