--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     // MySQL
     runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'
 
+    // Postgres SQL
+    // runtimeOnly 'org.postgresql:postgresql'
+
     // Swagger 3 (Springfox)
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
